# deepgram-python-sdk-transport-sagemaker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  docs_improvement.yml  feature_request.yml
.github/workflows/: changelog-log.yml  ci.yml  release-please.yml  tests-daily.yml
examples/: sagemaker_flux.py  sagemaker_live_mic.py  sagemaker_live_mic_flux.py  sagemaker_stt.py  sagemaker_tts.py
loadtest/: README.md  __init__.py  cli.py  connection.py  tts_cli.py  wer.py
src/deepgram_sagemaker/: __init__.py  config.py  transport.py
tests/: test_config.py  test_factory.py  test_retry.py
